--- a/index.html
+++ b/index.html
@@ -1,5 +1,150 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Pet Blog</title>
+<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+<link href='https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
+<style>
+.list{
+  list-style-image: url('f.png');
+}
+</style>
+</head>
 <body>
-  <h1>Hi!</h1>
-  </body>
+
+
+
+<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-2195009-2', 'auto');
+      ga('send', 'pageview');
+
+      ga('create', 'UA-2195009-27', 'auto', {name: "foundation"});
+      ga('foundation.send', 'pageview');
+
+    </script>
+
+<div class="top-bar">
+<div class="top-bar-left">
+<ul class="menu">
+<li class="menu-text">Key Agency</li>
+</ul>
+</div>
+<div class="top-bar-right">
+<ul class="menu">
+<li><a href="#">Home</a></li>
+<li><a href="#">Likes</a></li>
+<li><a href="#">Profile</a></li>
+<li><a href="#">Settings</a></li>
+</ul>
+</div>
+</div>
+
+<div class="callout large primary">
+<div class="row column text-center">
+<h1>Pet Blog</h1>
+</div>
+</div>
+<div class="row" id="content">
+<div class="medium-8 columns">
+<div class="blog-post">
+<h3>Meet Morty <small>11/27/2015</small></h3>
+<img id="morty" class="thumbnail" src="images\morty.jpg">
+<p>Morty is the first of the three cats that my sister owns and that I live with. He's the weirdest of the bunch and the loudest. He also is the most skittish and will run away from any loud sound. His weirdiness makes him the most funny, so he's alway good for a laugh!</p>
+<div class="callout">
+<ul class="menu simple">
+<li><a href="#">Author: Carol Key</a></li>
+<li><a href="#">Comments: 4</a></li>
+</ul>
+</div>
+</div>
+<div class="blog-post">
+<h3>Meet Rick <small>9/20/2016</small></h3>
+<img class="thumbnail" src="images\rick.jpg">
+<p>Rick is the second of my sister's three cats. He LOVES food!!! He was the first cat I ever meet who liked and actively seeked out human food. He really likes egg yolks and any kind of soup. He's the heaviest of the crew, but also the sweetest. Rick was also named my friend Lindsey's favorite.</p>
+<div class="callout">
+<ul class="menu simple">
+<li><a href="#">Author: Carol Key</a></li>
+<li><a href="#">Comments: 3</a></li>
+</ul>
+</div>
+</div>
+<div class="blog-post">
+<h3>Meet Jerry <small>6126/2018</small></h3>
+<img class="thumbnail" src="images\jerry.jpg">
+<p>Jerry is the baby of the cat family. Jerry is a pretty moody cat. Sometimes he will climb up your body just for pets and other times he dodges your hand when you reach out. Despite this he's very loving. Although, he does try to drink out of everyone's cup and eat my sister's plants.</p>
+<div class="callout">
+<ul class="menu simple">
+<li><a href="#">Author: Carol Key</a></li>
+<li><a href="#">Comments: 1</a></li>
+</ul>
+</div>
+</div>
+<div class="blog-post">
+<h3>Meet Oliver and Puck <small>6/20/2014</small></h3>
+<img class="thumbnail" src="images\oliverpuck.jpg">
+<p>These two puppers are my parent's dogs Oliver and Puck. They are the dream team. Oliver is yet another food driven pet. He will do almost anything for a treat execpt maybe take his medicine. Puck on the other hand would much prefer a good pet to a treat. Puck is a very needy boy who needs constant attention or he will whine.</p>
+<div class="callout">
+<ul class="menu simple">
+<li><a href="#">Author: Carol Key</a></li>
+<li><a href="#">Comments: 5</a></li>
+</ul>
+</div>
+</div>
+<div class="blog-post">
+<h3>Meet Ed <small>11/10/2018</small></h3>
+<img class="thumbnail" src="images\ed.jpg">
+<p>Ed is the newest cat, but not one of my sister's. Ed is my parent's cat. If Rick LOVES food, then Ed REALLY REALLY LOVES food. Ed will not stop meowing if anyone is within 10 feet of his food bowl and not currently fulling it up. He really likes to lick people's hands. He loves to sit on everyone's lap for hours on end which often means you'll be covered in cat hair by the time you leave my parent's house.</p>
+<div class="callout">
+<ul class="menu simple">
+<li><a href="#">Author: Carol Key</a></li>
+<li><a href="#">Comments: 0</a></li>
+</ul>
+</div>
+</div>
+</div>
+<div class="medium-3 columns" data-sticky-container>
+<div class="sticky" data-sticky data-anchor="content">
+<h4>Categories</h4>
+<ul class="list">
+<li><a href="#">Cats</a></li>
+<li><a href="#">Dogs</a></li>
+<li><a href="#">Pets</a></li>
+<li><a href="#">That's It Really</a></li>
+</ul>
+<h4>Authors</h4>
+<ul class="list">
+<li><a href="#">Carol</a></li>
+<li><a href="#">Carol</a></li>
+<li><a href="#">Also Carol</a></li>
+<li><a href="#">It's Only Me, Carol</a></li>
+</ul>
+</div>
+</div>
+</div>
+
+<div class="row column">
+<ul class="pagination" role="navigation" aria-label="Pagination">
+<li class="disabled">Previous</li>
+<li class="current"><span class="show-for-sr">You're on page</span> 1</li>
+<li><a href="#" aria-label="Page 2">2</a></li>
+<li><a href="#" aria-label="Page 3">3</a></li>
+<li><a href="#" aria-label="Page 4">4</a></li>
+<li class="ellipsis"></li>
+<li><a href="#" aria-label="Page 12">12</a></li>
+<li><a href="#" aria-label="Page 13">13</a></li>
+<li><a href="#" aria-label="Next page">Next</a></li>
+</ul>
+</div>
+<script src="bower_components/jquery/dist/jquery.js?hash=c49047dde69a9cb7a50ca40493937357"></script>
+<script src="bower_components/what-input/what-input.js?hash=7bb7fea252899152ca0173913a02f1eb"></script>
+<script src="bower_components/foundation-sites/dist/foundation.js?hash=91fea43a73487cc87eaf15f88cfe1529"></script>
+<script src="js/app.js?hash=69ec9e4a5c39f580d627486494fdbb8c"></script>
+</body>
 </html>
