Small problem fixed hopefully

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="medium-8 columns">
 <div class="blog-post">
 <h3>Meet Morty <small>11/27/2015</small></h3>
-<img id="morty" class="thumbnail" src="images\morty.jpg">
+<img id="morty" class="thumbnail" src="images\morty.JPG">
 <p>Morty is the first of the three cats that my sister owns and that I live with. He's the weirdest of the bunch and the loudest. He also is the most skittish and will run away from any loud sound. His weirdiness makes him the most funny, so he's alway good for a laugh!</p>
 <div class="callout">
 <ul class="menu simple">
@@ -66,7 +66,7 @@
 </div>
 <div class="blog-post">
 <h3>Meet Rick <small>9/20/2016</small></h3>
-<img class="thumbnail" src="images\rick.jpg">
+<img class="thumbnail" src="images\rick.JPG">
 <p>Rick is the second of my sister's three cats. He LOVES food!!! He was the first cat I ever meet who liked and actively seeked out human food. He really likes egg yolks and any kind of soup. He's the heaviest of the crew, but also the sweetest. Rick was also named my friend Lindsey's favorite.</p>
 <div class="callout">
 <ul class="menu simple">
@@ -77,7 +77,7 @@
 </div>
 <div class="blog-post">
 <h3>Meet Jerry <small>6126/2018</small></h3>
-<img class="thumbnail" src="images\jerry.jpg">
+<img class="thumbnail" src="images\jerry.JPG">
 <p>Jerry is the baby of the cat family. Jerry is a pretty moody cat. Sometimes he will climb up your body just for pets and other times he dodges your hand when you reach out. Despite this he's very loving. Although, he does try to drink out of everyone's cup and eat my sister's plants.</p>
 <div class="callout">
 <ul class="menu simple">
