--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </div>
 </div>
 <div class="blog-post">
-<h3>Meet Jerry <small>6126/2018</small></h3>
+<h3>Meet Jerry <small>6/26/2018</small></h3>
 <img class="thumbnail" src="images\jerry.JPG">
 <p>Jerry is the baby of the cat family. Jerry is a pretty moody cat. Sometimes he will climb up your body just for pets and other times he dodges your hand when you reach out. Despite this he's very loving. Although, he does try to drink out of everyone's cup and eat my sister's plants.</p>
 <div class="callout">
